--- a/src/main/webapp/static/front/css1/main5152.css
+++ b/src/main/webapp/static/front/css1/main5152.css
@@ -172,7 +172,7 @@ form.search-form {
   margin: 40px 0 0;
   text-align: center;
 }
-form.search-form .input-common, form.search-form input.search-term, form.search-form input.search-btn {
+form.search-form .input-common, form.search-form input.search-term,form.search-form select.select-term, form.search-form input.search-btn {
   font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   box-shadow: none;
   border-radius: 0;
@@ -181,13 +181,22 @@ form.search-form .input-common, form.search-form input.search-term, form.search-
   vertical-align: bottom;
 }
 form.search-form input.search-term {
-  font-size: 14px;
+  font-size: 16px;
   height: 24px;
   line-height: 24px;
   padding: 12px;
   width: 62%;
   color: #858c91;
-  margin-right: 10px;
+  margin-right: 0;
+  margin-bottom: 0;
+}
+form.search-form select.select-term {
+  font-size: 16px;
+  height: 48px;
+  padding: 0px;
+  width: 8%;
+  color: #858c91;
+  margin-right: 0;
   margin-bottom: 0;
 }
 form.search-form input.search-term.loading {
