--- a/src/main/webapp/static/front/css1/style.css
+++ b/src/main/webapp/static/front/css1/style.css
@@ -3,7 +3,7 @@ h1, h2, h3 {margin-top: 0;}
 ul, ol {margin: 0;}
 p {margin: 0;}
 html, body{
-    font-family: 'Open Sans', sans-serif;
+    font-family: "微软雅黑", Arial;
     font-size: 100%;
     background: #FFf;
 }
