# WARNING: head commit changed in the meantime
前端代码版本0.2提交(首页和登录页面修改完善)

--- a/src/main/webapp/static/front/css1/custom5152.css
+++ b/src/main/webapp/static/front/css1/custom5152.css
@@ -47,7 +47,7 @@ border-color:#f0b70c;
 }
 
 h1, h2, h3, h4, h5, h6, .hero-text, blockquote, legend, #top .slideshow_caption h1{
-font-family:"HelveticaNeue", "Helvetica Neue", Helvetica, Arial;
+font-family:"微软雅黑", Arial;
 }
 
 
