--- a/src/main/webapp/static/front/css/flexslider.css
+++ b/src/main/webapp/static/front/css/flexslider.css
@@ -1,122 +1,82 @@
-/* Browser Resets */
+/*
+ * jQuery FlexSlider v2.2.0
+ * http://www.woothemes.com/flexslider/
+ *
+ * Copyright 2012 WooThemes
+ * Free to use under the GPLv2 license.
+ * http://www.gnu.org/licenses/gpl-2.0.html
+ *
+ * Contributing author: Tyler Smith (@mbmufffin)
+ */
+
+
+/* Browser Resets
+*********************************/
 .flex-container a:active,
 .flexslider a:active,
 .flex-container a:focus,
 .flexslider a:focus  {outline: none;}
 .slides,
 .flex-control-nav,
-.flex-direction-nav {margin: 0; padding: 0; list-style: none;} 
+.flex-direction-nav {margin: 0; padding: 0; list-style: none;}
+
 
 /* FlexSlider Necessary Styles
-*********************************/ 
+*********************************/
 .flexslider {margin: 0; padding: 0;}
-.flexslider .slides > li {display: none; -webkit-backface-visibility: hidden; padding-top:50px;} /* Hide the slides before the JS is loaded. Avoids image jumping */
-.flexslider .slides img {display: block;min-height:310px;margin:0 auto;}
+.flexslider .slides > li {display: none; -webkit-backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
+.flexslider .slides img {width: 100%; display: block;}
 .flex-pauseplay span {text-transform: capitalize;}
 
 /* Clearfix for the .slides element */
-.slides:after {content: "."; display: block; clear: both; visibility: hidden; line-height: 0; height: 0;} 
-html[xmlns] .slides {display: block;} 
+.slides:after {content: "\0020"; display: block; clear: both; visibility: hidden; line-height: 0; height: 0;}
+html[xmlns] .slides {display: block;}
+* html .slides {height: 1%;}
 
 /* No JavaScript Fallback */
 /* If you are not using another script, such as Modernizr, make sure you
  * include js that eliminates this class on page load */
 .no-js .slides > li:first-child {display: block;}
 
-
 /* FlexSlider Default Theme
 *********************************/
-.flexslider { background: ; position: relative; -webkit-border-radius: 4px; -moz-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; ,0,0,.2); zoom: 1;}
-.flex-viewport {max-height:1500px; -webkit-transition: all 1s ease; -moz-transition: all 1s ease; transition: all 1s ease;}
-.loading .flex-viewport {max-height: 300px;}
-.flexslider .slides {zoom: 1;}
-.carousel li {margin-right: 5px}
+.flexslider { margin: 0 0 0px; background: #fff; border: 0px solid #fff; position: relative; -webkit-border-radius: 4px; -moz-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.2); -moz-box-shadow: 0 1px 4px rgba(0,0,0,.2); -o-box-shadow: 0 1px 4px rgba(0,0,0,.2); box-shadow: 0 1px 4px rgba(0,0,0,.2); zoom: 1; }
+.flex-viewport { max-height: 2000px; -webkit-transition: all 1s ease; -moz-transition: all 1s ease; -o-transition: all 1s ease; transition: all 1s ease; }
+.loading .flex-viewport { max-height: 300px; }
+.flexslider .slides { zoom: 1; }
+.carousel li { margin-right: 5px; }
+
 /* Direction Nav */
-.flex-direction-nav a {width:65px; height:65px; margin: -20px 0 0; display: block; background: url(../../images/arrows.png) no-repeat -2px -2px; position: absolute; top:50%; cursor: pointer; text-indent: -9999px; opacity: 0; -webkit-transition: all .3s ease;}
-.flex-direction-nav .flex-next {background-position:100% 0; right:0px; }
-.flex-direction-nav .flex-prev {left: 0px;}
-.flexslider:hover .flex-next {opacity: 0.8; right: 0px;}
-.flexslider:hover .flex-prev {opacity: 0.8; left: 0px;}
-/*--.flexslider:hover .flex-next:hover, .flexslider:hover .flex-prev:hover {opacity: 1;}
-.flex-direction-nav .disabled {opacity: .3!important; filter:alpha(opacity=30); cursor: default;}--*/
+.flex-direction-nav {*height: 0;}
+.flex-direction-nav a  { text-decoration:none; display: block; width: 40px; height: 48px; margin: -20px 0 0; position: absolute; top: 50%; z-index: 10; overflow: hidden; opacity: 0; cursor: pointer; color: rgba(0,0,0,0.8);  background:url(../../images/arr.png) no-repeat; text-indent:-999em }
+.flex-direction-nav .flex-prev { left: -50px; background-position:0 0 }
+.flex-direction-nav .flex-next { right: -50px; background-position:-132px 0}
+.flexslider:hover .flex-prev { opacity: 0.7; left: 10px;}
+.flexslider:hover .flex-next { opacity: 0.7; right: 10px;}
+.flexslider:hover .flex-next:hover, .flexslider:hover .flex-prev:hover { opacity: 1; }
+.flex-direction-nav .flex-disabled { opacity: 0!important; filter:alpha(opacity=0); cursor: default; }
+
+
+/* Pause/Play */
+.flex-pauseplay a { display: block; width: 20px; height: 20px; position: absolute; bottom: 5px; left: 10px; opacity: 0.8; z-index: 10; overflow: hidden; cursor: pointer; color: #000; background:#ddd}
+.flex-pauseplay a:before  { font-family: "flexslider-icon"; font-size: 20px; display: inline-block; content: '\f004'; }
+.flex-pauseplay a:hover  { opacity: 1; }
+.flex-pauseplay a.flex-play:before { content: '\f003'; }
 
 /* Control Nav */
-.flex-control-nav {text-align: center;right:0;}
-.flex-control-nav li {display:inline-block; zoom: 1; *display: inline;padding:0.2em;}
-.flex-control-paging li a {width:13px; height:13px; display:inline-block;  border:2px solid #ff8261; cursor: pointer; text-indent: -9999px; -webkit-border-radius: 20px; -moz-border-radius: 20px; -o-border-radius: 20px; border-radius: 20px; box-shadow: inset 0 0 3px rgba(0,0,0,0.3); border:;}
-.flex-control-paging li a:hover { /*--background:#c36c88; --*/}
-.flex-control-paging li a.flex-active { border:2px solid #5278db; cursor: default; }
+.flex-control-nav {width: 100%; position: absolute; bottom: -40px; text-align: center;}
+.flex-control-nav li {margin: 0 6px; display: inline-block; zoom: 1; *display: inline;}
+.flex-control-paging li a {width: 11px; height: 11px; display: block; background: #666; background: rgba(0,0,0,0.5); cursor: pointer; text-indent: -9999px; -webkit-border-radius: 20px; -moz-border-radius: 20px; -o-border-radius: 20px; border-radius: 20px; -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); -moz-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); -o-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); box-shadow: inset 0 0 3px rgba(0,0,0,0.3); }
+.flex-control-paging li a:hover { background: #333; background: rgba(0,0,0,0.7); }
+.flex-control-paging li a.flex-active { background: #000; background: rgba(0,0,0,0.9); cursor: default; }
 
 .flex-control-thumbs {margin: 5px 0 0; position: static; overflow: hidden;}
 .flex-control-thumbs li {width: 25%; float: left; margin: 0;}
 .flex-control-thumbs img {width: 100%; display: block; opacity: .7; cursor: pointer;}
 .flex-control-thumbs img:hover {opacity: 1;}
-.flex-control-thumbs .active {opacity: 1; cursor: default;}
-/*----flexslider1---*/
-.flexslider1{
-	
-}
-.flexslider1 ol.flex-control-nav{
-	width: ;
-	position: absolute;
-	bottom: -49px;
-	text-align: center;
-	left: 3em;
-}
-.flexslider1 .flex-control-paging li a{width: 12px; height: 12px;}
-.flexslider1.flex-control-nav  li{margin: 0 1px;}
+.flex-control-thumbs .flex-active {opacity: 1; cursor: default;}
 
 @media screen and (max-width: 860px) {
-  .flex-direction-nav .flex-prev {opacity: 1; left: 0;}
-  .flex-direction-nav .flex-next {opacity: 1; right: 0;}
-}
-@media screen and (max-width: 1024px) {
-	.flex-control-nav {left: 55em;}
-	.flexslider1 ol.flex-control-nav {bottom: -28px;left: 1em;}
-  .flexslider .slides img {
-    min-height:0;
-    width:26%;
-}
-}
-@media screen and (max-width: 768px) {
-	.flex-control-nav {left: 23em;}
-	.flexslider1 ol.flex-control-nav {bottom: -6px;left: 22em;}
-	.flexslider .slides > li {
-     padding-top: 30px;
-}
-}
-@media screen and (max-width: 640px) {
-	.flex-control-nav {left: 18em;}
-.flexslider1 ol.flex-control-nav {bottom: 2px;left: 18em;}
-.flex-direction-nav a {
-  width: 30px;
-  height: 30px;
-  margin: -20px 0 0;
-  display: block;
-  background: url(../../images/arrows.png) no-repeat 0 0;
-  position: absolute;
-  top:50%;
-  cursor: pointer;
-  text-indent: -9999px;
-  opacity: 0;
-  -webkit-transition: all .3s ease;
-  background-size: 200%;
-}
-}
-@media screen and (max-width: 480px) {
-.flex-control-nav {left: 12em;}
-.flexslider1 ol.flex-control-nav {bottom: 1px;left: 12em;}
-.flexslider .slides > li {
-  padding-top: 20px;
-}
-}
-@media screen and (max-width: 320px) {
-.flex-control-nav {left: 5.5em;}
-
-.flexslider1 ol.flex-control-nav {bottom: 1px;left: 6em;}
-}
-.flexslider .slides img {
-  min-height: 0;
-  width: 36%;
-}
+  .flex-direction-nav .flex-prev { opacity: 1; left: 10px;}
+  .flex-direction-nav .flex-next { opacity: 1; right: 10px;}
 }
