--- a/src/main/webapp/static/front/css1/main5152.css
+++ b/src/main/webapp/static/front/css1/main5152.css
@@ -99,6 +99,7 @@ span.tag-line {
   font-size: 16px;
   color: #395996;
 }
+
 .main-nav div > ul > li a:hover {
   color: #ff9900;
 }
@@ -108,6 +109,7 @@ span.tag-line {
 .main-nav div > ul > li:last-child {
   padding-right: 0;
 }
+
 .main-nav div > ul li.current-menu-item a {
   color: #ff9900;
 }
@@ -126,19 +128,21 @@ span.tag-line {
   width: 150px;
   cursor: pointer;
 }
+
 .main-nav .sub-menu li:hover {
   background-color: #000;
 }
 .main-nav .sub-menu li:hover > a {
   color: #ff9900;
 }
+
 .main-nav .sub-menu .sub-menu {
   top: 0px;
   right: 170px;
   left: auto;
 }
 .main-nav .responsive-nav {
-  display: none;
+  display: block;
 }
 
 .top {
