--- a/src/main/webapp/static/front/css1/main5152.css
+++ b/src/main/webapp/static/front/css1/main5152.css
@@ -1295,7 +1295,7 @@ input[type=text].error,
   display: block;
   letter-spacing: 0;
   outline: none;
-  padding: 0 20px;
+  padding: 10px 20px;
   text-decoration: none;
   text-shadow: 0 1px 0 #fff;
 }
