--- a/src/main/webapp/static/front/css1/main5152.css
+++ b/src/main/webapp/static/front/css1/main5152.css
@@ -348,7 +348,7 @@ form.search-form input.search-btn:hover {
 }
 /*弹出框*/
 .mask { margin: 0; padding: 0; border: none; width: 100%; height: 100%; background: #333; opacity: 0.6; filter: alpha(opacity=60); z-index: 9999; position: fixed; top: 0; left: 0; display: none; }
-#LoginBox { position: absolute; left: 460px; top: 0px; z-index: 10000; display: none; }
+#LoginBox { position: absolute; left: 22%; top: -1%; z-index: 10000; display: none; }
 button::-moz-focus-inner {
 border:0;
 padding:0;
@@ -358,10 +358,10 @@ margin:0;
 .search-box { padding: 5px; position: relative; }
 .serch-bg { background-color: #fff; filter: alpha(opacity=30); background: #007fd72e; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; height: 90px;*margin-left:-10px; }
 .serch-border { border: 1px solid #FFF; height: 58px; overflow: hidden; position: relative; margin-top: -85px;margin-left: 10px;margin-right: 10px;}
-.serch-border input { color: #999; font-size: 14px; background-color: #FFF; height: 58px; line-height: 58px; border: none 0; width: 85%; padding-left: 10px; float: left; }
-.serch-botton { background-image: url("../../images/search01.png"); background-repeat: no-repeat; background-position: 14px center; padding-left: 45px; background-color: #00a6db; font-size: 16px; float: left; width: 15%; height: 58px; color: #FFF; line-height: 58px; }
+.serch-border input { color: #999; font-size: 14px; background-color: #FFF; height: 58px; line-height: 58px; border: none 0; width: 80%; padding-left: 10px; float: left; }
+.serch-botton { background-image: url("../../images/search01.png"); background-repeat: no-repeat; background-position: 14px center; padding-left: 45px; background-color: #00a6db; font-size: 16px; float: left; width: 20%; height: 58px; color: #FFF; line-height: 58px; }
 
-.easyDialog_wrapper { width: 500px; color: #444; border: 3px solid rgba(0,0,0,0); -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.4); -moz-box-shadow: 0 0 10px rgba(0,0,0,0.4); box-shadow: 0 0 10px rgba(0,0,0,0.4); display: none; font-family: "Microsoft yahei", Arial; }
+.easyDialog_wrapper {position: fixed; width: 500px; color: #444; border: 3px solid rgba(0,0,0,0); -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.4); -moz-box-shadow: 0 0 10px rgba(0,0,0,0.4); box-shadow: 0 0 10px rgba(0,0,0,0.4); display: none; font-family: "Microsoft yahei", Arial; }
 .easyDialog_wrapper .easyDialog_content { background: #fff; }
 .easyDialog_wrapper .easyDialog_title { overflow: hidden; color: #666; padding: 0 10px; font-size: 14px; }
 .easyDialog_wrapper .easyDialog_text { padding: 0 40px 20px; }
