--- a/src/main/webapp/static/front/css1/main5152.css
+++ b/src/main/webapp/static/front/css1/main5152.css
@@ -427,6 +427,198 @@ font-family : Trebuchet MS; }
   margin-bottom: 5px;
 }
 
+/*dy-content----------------------------------------*/
+
+	.index-page-container{
+		position: absolute;
+    	width:1583px;
+    	left:0;
+    	right:0;
+    	margin:-55px auto 0;
+	}
+	#main-content{
+		width:100%;
+	}
+	#main-content .test{
+	    margin-left: 20px;
+	    width: 120px;
+	    height: 120px;
+	    border-radius: 60px;
+	    color: #f86539;
+	    border-color: #f86539;
+	    border-style: solid;
+	    border-width: 2px;
+	    background-color: #fff;
+	}
+	#main-content .test h1{
+    	padding-left: 34px;
+    	padding-top: 32px;
+    	padding-bottom: 30px;
+    	margin-top: 0;
+    	font-size: 50px;
+	}
+
+	#main-content #li-menu{
+		display: inline-block;
+
+		width:100%;
+	}
+
+	#main-content #li-menu ul{
+		width: 1065px;
+		margin:0 auto;
+	}
+	#main-content #li-menu ul li{
+		margin-left: 60px;
+    	margin-right: 60px;
+	}
+	#main-content #li-menu ul li div:hover{
+		background-color:#f86539;
+		box-shadow: 2px 2px 2px #888888;
+	}
+	
+	#main-content #li-menu ul .div-check{
+		background-color:#f86539;
+		box-shadow: 2px 2px 2px #888888;
+	}
+
+	#main-content #li-menu ul li .div-check h1{
+		color: white;
+	}
+	#main-content li{
+		float:left;
+		list-style-type: none;
+	}
+
+	#main-content .dy-content{
+		display:none;
+	}
+	#main-content .check{
+		display:block;
+	}
+	#main-content h2{
+		font-size: 49px;
+    	margin: 41px 0 12px 43px;
+    	letter-spacing: 14px;
+    	color: #717171;
+    	width:274px;
+    	float:left;
+	}
+	
+	#main-content .dy-each-first a{
+		display: block;
+    	font-size: 22px;
+    	color: #ff9400;
+    	margin: 9px 0 0 46px;
+    	letter-spacing: 4px;
+    	width: 165px;
+		cursor:pointer;
+	}
+
+	#main-content .dy-content{
+		width:80%;
+		height: 349px;
+		margin:0 auto;
+		margin-top: 50px;
+	}
+
+	#main-content .dy-content .dy-each{
+		width:19%;
+		height:50%;
+		background-color:#f0f5f8;
+		float:left;
+		border:1px solid white;
+		margin-left: 6.5px;
+		border-radius: 15px;
+	}
+
+	#main-content .dy-content .dy-each-first{
+	    width: 38.5%;
+	    height: 50%;
+	    background-color: #f0f5f8;
+	    float: left;
+	    margin-left: 12px;
+	    margin-right: 2px;
+		border-radius: 12px;
+	}
+
+
+	#main-content .li-content{
+		background-color: #9a9090;
+		height:100%;
+		width:100%;
+		border-radius: 5px;
+	}
+	
+	#main-content .dy-buy img{
+		width:93px;
+		margin:0 ;
+		float:right;
+		top:20px;
+		margin-top: 41px;
+    	margin-right: 50px;
+	}
+	
+	#main-content .dy-sold img{
+		width:93px;
+		margin:0 ;
+		float:right;
+		top:20px;
+		margin-top: 41px;
+    	margin-right: 50px;
+	}
+	
+	#main-content .dy-reword img{
+		width:93px;
+		margin:0 ;
+		float:right;
+		top:20px;
+		margin-top: 41px;
+    	margin-right: 50px;
+	}
+	
+	#main-content .dy-content .dy-each h4{
+		margin-top: 27px;
+    	margin-left: 18px;
+    	font-size: 20px;
+    	margin-bottom: 23px;
+	}
+	
+	#main-content .dy-content .dy-each .article-meta{
+		margin-top: 27px;
+	    display: block;
+	    margin-left: 18px;
+	    font-size: 14px;
+	    margin-bottom: 0px;
+	}
+	
+	#main-content .dy-content .dy-each .like-count{
+		margin-left: 203px;
+		height: 16px;
+		overflow:hidden;
+		display: block;
+	}
+	
+	#main-content .dy-content .dy-each .like-count img{
+		margin-top: 3px;
+		width: 12px;
+	}
+	#main-content .dy-content .dy-each .like-count img:hover{
+		margin-top: -34px;
+	}
+	
+	#main-content .dy-content .dy-last h3{
+		margin-top: 72px;
+    	margin-left: 42px;
+    	
+	}
+	#main-content .dy-content .dy-last h3 a{
+		text-decoration:none;
+	}
+	
+	
+/*----dy end-----------*/
+
 /* WordPress Core --------------------------------------------------------------------------------------------------- */
 .alignnone {
   margin: 5px 0 20px;
