--- a/src/main/webapp/static/front/css1/main5152.css
+++ b/src/main/webapp/static/front/css1/main5152.css
@@ -1083,6 +1083,22 @@ ul.articles li.article-entry:last-child {
   color: #395996;
 }
 
+.like-btn .tome {
+	display: inline-block;
+	width: 100px; 
+	float: right; 
+	padding-top: 5px; 
+	padding-bottom: 5px;
+	margin-right:5px;
+	font-size: 15px;
+	letter-spacing: 2px; 
+	border: 1px solid #c7c5c5;
+	text-align:center;
+	border-radius: 3px;
+	background:rgb(27,107,177);
+	color:white;
+}
+
 .like-btn .like-it {
   display: inline-block;
   height: 20px;
